--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ twitter_username: AnArtificialOwl
 github_username: daita
 #gplus_username:  loremipsum
 #linkedin_public_url: loremipsum # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
-disqus_username: loremipsum
+disqus_username: cult
 profile_picture: https://daita.github.io/owl512.png
 
 # Build settings
